--- a/index.html
+++ b/index.html
@@ -8,24 +8,48 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div id="screen-display"></div>
-    <button id="1">1</button>
-    <button id="2">2</button>
-    <button id="3">3</button>
-    <button id="4">4</button>
-    <button id="5">5</button>
-    <button id="6">6</button>
-    <button id="7">7</button>
-    <button id="8">8</button>
-    <button id="9">9</button>
-    <button id="0">0</button>
-    <button id="+">+</button>
-    <button id="-">-</button>
-    <button id="x">x</button>
-    <button id="/">/</button>
-    <button id="=">=</button>
-    <button id="decimal">.</button>
-    <button id="clear">CLEAR</button>
+    <div id="container">
+        <div id="screen-display">
+            1000+1000
+        </div>
+        <div id="buttons">
+            <div id="top-buttons">
+                <button id="clear">AC</button>
+                <button id="=">=</button>
+            </div>
+            <div id="bottom-buttons">
+                <div id="left-buttons">
+                    <div class="rows">                        
+                        <button id="7">7</button>
+                        <button id="8">8</button>
+                        <button id="9">9</button>
+                    </div>
+                    <div class="rows">
+                        <button id="4">4</button>
+                        <button id="5">5</button>
+                        <button id="6">6</button>
+                    </div>
+                    <div class="rows">
+                        <button id="1">1</button>
+                        <button id="2">2</button>
+                        <button id="3">3</button>  
+                    </div>
+                    <div class="rows">
+                        <button id="decimal">.</button>
+                        <button id="0">0</button>
+                        <button id="neg-pos">+/-</button>  
+                    </div>
+                </div>
+                <div id="right-buttons">
+                    <button id="+">+</button>
+                    <button id="-">-</button>
+                    <button id="x">x</button>
+                    <button id="/">/</button>
+                </div>
+            </div>
+        </div>
+    </div>
+  
     
 </body>
 </html>
