Added button functionality

--- a/index.html
+++ b/index.html
@@ -5,51 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
-    <script src="index.js"></script>
 </head>
 <body>
     <div id="container">
         <div id="screen-display">
-            1000+1000
+            
         </div>
         <div id="buttons">
             <div id="top-buttons">
-                <button id="clear">AC</button>
-                <button id="=">=</button>
+                <button id="clear" data-type="clear">AC</button>
+                <button id="=" data-type="equals">=</button>
             </div>
             <div id="bottom-buttons">
                 <div id="left-buttons">
                     <div class="rows">                        
-                        <button id="7">7</button>
-                        <button id="8">8</button>
-                        <button id="9">9</button>
+                        <button id="7" data-type="digit">7</button>
+                        <button id="8" data-type="digit">8</button>
+                        <button id="9" data-type="digit">9</button>
                     </div>
                     <div class="rows">
-                        <button id="4">4</button>
-                        <button id="5">5</button>
-                        <button id="6">6</button>
+                        <button id="4" data-type="digit">4</button>
+                        <button id="5" data-type="digit">5</button>
+                        <button id="6" data-type="digit">6</button>
                     </div>
                     <div class="rows">
-                        <button id="1">1</button>
-                        <button id="2">2</button>
-                        <button id="3">3</button>  
+                        <button id="1" data-type="digit">1</button>
+                        <button id="2" data-type="digit">2</button>
+                        <button id="3" data-type="digit">3</button>  
                     </div>
                     <div class="rows">
-                        <button id="decimal">.</button>
-                        <button id="0">0</button>
-                        <button id="neg-pos">+/-</button>  
+                        <button id="decimal" data-type="decimal">.</button>
+                        <button id="0" data-type="digit">0</button>
+                        <button id="neg-pos" data-type="neg-pos">+/-</button>  
                     </div>
                 </div>
                 <div id="right-buttons">
-                    <button id="+">+</button>
-                    <button id="-">-</button>
-                    <button id="x">x</button>
-                    <button id="/">/</button>
+                    <button id="+" data-type="operator">+</button>
+                    <button id="-" data-type="operator">-</button>
+                    <button id="x" data-type="operator">x</button>
+                    <button id="/" data-type="operator">/</button>
                 </div>
             </div>
         </div>
     </div>
   
-    
+    <script src="index.js"></script>
 </body>
 </html>
